--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,7 @@ body{
 }
 .secondary-text{
     color: #828282;
-    font-size: 13px;
+    font-size: 15px;
 }
 .title-text{
     color: #5D5FEF;
@@ -33,18 +33,42 @@ body{
 .btn{
     background: #5D5FEF;
 }
+.btn:hover{
+    background-color: #4b4dcf;
+}
 .btn-danger{
     background: #EB5757;
+}
+.btn-danger:hover{
+    background-color: #db3434;
+}
+.btn-deactivate{
+    background-color: white;
+    color: #EB5757!important;
+    border-color: #EB5757;
+}
+.btn-deactivate:hover{
+    background: #EB5757!important;
+    color: white!important;
+}
+.btn-activate{
+    background-color: white!important;
+    border-color: #5D5FEF;
+    color: #5D5FEF!important;
+}
+.btn-activate:hover{
+    background-color: #5D5FEF!important;
+    color: white!important;
 }
 form input{
     background: rgba(165, 166, 246, 0.1)!important;
     border: 1px solid #A5A6F6!important;
     border-radius: 8px!important;
 }
-.residents-card{
+.card_{
     background: rgba(222, 222, 252, 0.1);
 }
-#admin-resident-card{
+.lead-card{
     background: rgba(222, 222, 252, 0.4);
 }
 nav{
@@ -56,6 +80,3 @@ nav{
     background: #A5A6F61A;
     height: 20vh;
 }
-/* .title{
-    color: #5D5FEF;
-} */
