--- a/styles/main.css
+++ b/styles/main.css
@@ -31,21 +31,21 @@ body{
     background-size: contain;
 }
 .btn{
-    background: #5D5FEF;
+    background: #5D5FEF!important;
 }
 .btn:hover{
-    background-color: #4b4dcf;
+    background-color: #4b4dcf!important;
 }
 .btn-danger{
-    background: #EB5757;
+    background: #EB5757!important;
 }
 .btn-danger:hover{
-    background-color: #db3434;
+    background-color: #db3434!important;
 }
 .btn-deactivate{
-    background-color: white;
+    background-color: white!important;
     color: #EB5757!important;
-    border-color: #EB5757;
+    border-color: #EB5757!important;
 }
 .btn-deactivate:hover{
     background: #EB5757!important;
@@ -59,6 +59,14 @@ body{
 .btn-activate:hover{
     background-color: #5D5FEF!important;
     color: white!important;
+}
+.btn-logout{
+    background-color: rgba(252, 222, 222, 0.19)!important;
+    color: #EB5757!important;
+}
+.btn-logout:hover{
+    background-color: rgba(252, 222, 222, 0.395)!important;
+    color: #EB5757!important;
 }
 form input{
     background: rgba(165, 166, 246, 0.1)!important;
